feat: message borad

--- a/frontend/public/front_page.html
+++ b/frontend/public/front_page.html
@@ -261,26 +261,32 @@
                     <img src="../src/assets/images/navigation/1.webp" alt="Official Poster">
                     <div class="image-card-content">
                         <h4>オフィシャルポスター</h4>
+                        <p class="subtitle">公式イラスト & アニメ名場面集</p> 
                     </div>
                 </div>
                 <div class="image-card">
                     <img src="../src/assets/images/navigation/2.jpg" alt="Fan Art">
                     <div class="image-card-content">
                         <h4>ファンアート</h4>
+                        <p class="subtitle">ファンが制作したイラスト集</p> 
                     </div>
                 </div>
                 <div class="image-card">
                     <img src="../src/assets/images/navigation/3.jpeg" alt="Peripheral Info">
                     <div class="image-card-content">
                         <h4>周辺情報</h4>
+                        <p class="subtitle">公式グッズ & コラボ商品最新情報</p> 
                     </div>
                 </div>
-                <div class="image-card">
-                    <img src="../src/assets/images/navigation/4.jpeg" alt="Free Discussion">
-                    <div class="image-card-content">
-                        <h4>自由に話し合う</h4>
+                <a href="message_board_threaded.html" target="_blank">
+                    <div class="image-card">
+                        <img src="../src/assets/images/navigation/4.jpeg" alt="Free Discussion">
+                        <div class="image-card-content">
+                            <h4>自由に話し合う</h4>
+                            <p class="subtitle">関連の話題を自由に共有しよう</p> 
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
 
