--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akai's Profile</title>
-    <link rel="stylesheet" href="../src/assets/styles/akai-style.css">
+    <link rel="stylesheet" href="frontend/src/assets/styles/akai-style.css">
     <style>
         * {
-            cursor: url("../src/assets/images/mouse.png"), 
+            cursor: url("frontend/src/assets/images/mouse.png"), 
                     /* fallback：图片加载失败时显示的默认鼠标（如 pointer/auto） */
                     pointer !important;
             
@@ -258,21 +258,21 @@
             <h2>ナビゲーション</h2>
             <div class="image-grid">
                 <div class="image-card">
-                    <img src="../src/assets/images/navigation/1.webp" alt="Official Poster">
+                    <img src="frontend/src/assets/images/navigation/1.webp" alt="Official Poster">
                     <div class="image-card-content">
                         <h4>オフィシャルポスター</h4>
                         <p class="subtitle">公式イラスト & アニメ名場面集</p> 
                     </div>
                 </div>
                 <div class="image-card">
-                    <img src="../src/assets/images/navigation/2.jpg" alt="Fan Art">
+                    <img src="frontend/src/assets/images/navigation/2.jpg" alt="Fan Art">
                     <div class="image-card-content">
                         <h4>ファンアート</h4>
                         <p class="subtitle">ファンが制作したイラスト集</p> 
                     </div>
                 </div>
                 <div class="image-card">
-                    <img src="../src/assets/images/navigation/3.jpeg" alt="Peripheral Info">
+                    <img src="frontend/src/assets/images/navigation/3.jpeg" alt="Peripheral Info">
                     <div class="image-card-content">
                         <h4>周辺情報</h4>
                         <p class="subtitle">公式グッズ & コラボ商品最新情報</p> 
@@ -280,7 +280,7 @@
                 </div>
                 <a href="message_board_threaded.html" target="_blank">
                     <div class="image-card">
-                        <img src="../src/assets/images/navigation/4.jpeg" alt="Free Discussion">
+                        <img src="frontend/src/assets/images/navigation/4.jpeg" alt="Free Discussion">
                         <div class="image-card-content">
                             <h4>自由に話し合う</h4>
                             <p class="subtitle">関連の話題を自由に共有しよう</p> 
@@ -506,7 +506,7 @@
         // 页面加载完成后初始化
         document.addEventListener('DOMContentLoaded', function() {
             // 初始化动态轮播图
-            const carousel = new DynamicCarousel('dynamic-carousel', '../src/assets/images/loop');
+            const carousel = new DynamicCarousel('dynamic-carousel', 'frontend/src/assets/images/loop');
             
             // 添加各种交互效果
             addRippleEffect();
