--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <p class="subtitle">公式グッズ & コラボ商品最新情報</p> 
                     </div>
                 </div>
-                <a href="message_board_threaded.html" target="_blank">
+                <a href="frontend/public/message_board_threaded.html" target="_blank">
                     <div class="image-card">
                         <img src="frontend/src/assets/images/navigation/4.jpeg" alt="Free Discussion">
                         <div class="image-card-content">
